backend/infra/k8s/meeting-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meeting-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: meeting
  template:
    metadata:
      labels:
        app: meeting
    spec:
      containers:
        - name: meeting
          image: projectManagement/meeting-service
---
apiVersion: v1
kind: Service
metadata:
  name: meeting-srv
spec: 
  selector:
    app: meeting
  ports:
    - name: meeting
      protocol: TCP
      port: 3005
      targetPort: 3000
