backend/infra/k8s/project-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project
          image: jasimck/project
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: project-srv
spec: 
  selector:
    app: project
  ports:
    - name: project
      protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
