backend/infra/k8s/task-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: task
  template:
    metadata:
      labels:
        app: task
    spec:
      containers:
        - name: task
          image: jasimck/task-management
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: task-srv
spec: 
  selector:
    app: task
  ports:
    - name: task
      protocol: TCP
      port: 3001
      targetPort: 3001
