backend/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: flowspace.cloud
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway-srv
                port:
                  number: 8080
          # - path: /?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: frontend-srv
          #       port:
          #         number: 80
